# ya-calendar

./: .env.example  .gitignore  LOGGING.md  README.md  debug_events.py  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  config.py  crud.py  db.py  logging_config.py  models.py
logs/: README.md
services/bot/: Dockerfile  README.md  app.py  bot.py  filters.py  requirements.txt  server.py
services/bot/handlers/: admin_handlers.py  user_handlers.py
services/celery_worker/: Dockerfile  celery_app.py  requirements.txt  tasks.py
services/worker/: Dockerfile  main.py  requirements.txt
